--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,21 @@ html {
   scroll-behavior: smooth;
 }
 
+a {
+  color: #cdb4db;
+}
+
 /* Set the margin to 0 to make sure the page stretches all the way to the edge of the browser window. */
 body {
   margin: 0;
 }
 header, footer {
-  background-color: #ffa500;
+  background-color: #ffafcc;
   text-align: left;
 /*  min-width: 500px; */
 }
 header {
-  font-family: Work Sans;
+  font-family: 'IBM Plex Sans', serif;
   color: #fff;
   min-height: 100vh;
   display: flex;
@@ -31,7 +35,7 @@ main {
   align-content: center;
 }
 h1 {
-  font-family: Poppins;
+  font-family: IBM Plex Serif;
   font-size: calc(1em + 3vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
@@ -39,12 +43,12 @@ h1 {
 }
 
 h2 {
-  font-family: Poppins;
+  font-family: IBM Plex Serif;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #ffa500;
+  color: #ffafcc;
   padding: 10px 0px 10px 10px;
 }
 
@@ -64,7 +68,7 @@ img {
 .bio {
   color: #ffffff;
   font-size: 24px;
-  font-family: 'Work Sans';
+  font-family: 'IBM Plex Sans';
 }
 .buttonBox {
   display: flex;
@@ -84,7 +88,7 @@ img {
 }
 
 .myButton:hover {
-    background-color:#e69708;
+    background-color: rgba(0,0,0,.25);
 }
 
 .myButton:active {
@@ -113,7 +117,7 @@ img {
 
 .mins {
   display: inline-block;
-  font-family: Poppins;
+  font-family: IBM Plex Serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.3px;
@@ -124,7 +128,7 @@ img {
 }
 
 .description {
-  font-family: Work Sans;
+  font-family: IBM Plex Sans;
   font-size: 14px;
   font-weight: 300;
   line-height: 1.29;
