--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,14 @@ img {
   margin: auto;
 }
 
-footer {
-  margin-top: 44px;
+footer div {
+  height: 100%;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 20px;
+  display: flex;
+  align-content: center;
+  padding: 10px 20px;
+  color: rgba(255, 255, 255, 1.0);
 }
 @media all and (max-width:700px) {
   main {
