--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,8 @@ img {
   width: 100%;
 }
 
-.a {
-
+a {
+  color: #00b09b;
 }
 
 .c {
@@ -118,23 +118,23 @@ img {
 .mins {
   display: inline-block;
   font-family: IBM Plex Serif;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #4a4a4a;
+  color: #2f2d2d;
   position: relative;
   bottom: 5px;
 }
 
 .description {
   font-family: IBM Plex Sans;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 300;
   line-height: 1.29;
   letter-spacing: 0.1px;
   text-align: left;
-  color: #4a4a4a;
+  color: #2f2d2d;
   padding: 10px 0px 10px 10px;
   border-top: 1px solid #4a4a4a;
 }
