--- a/css/style.css
+++ b/css/style.css
@@ -95,37 +95,12 @@ img {
     position:relative;
     top:1px;
 }
-.recipe {
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.5);
+.project {
+  box-shadow: 0 0px 1px 0 rgb(0 0 0 / 40%);
   width: 100%;
 }
 
-a {
-  color: #00b09b;
-}
 
-.c {
-
-}
-
-.time {
-  padding-left: 10px;
-  padding-top: 10px;
-  width: 20px;
-  height: auto;
-}
-
-.mins {
-  display: inline-block;
-  font-family: IBM Plex Serif;
-  font-size: 18px;
-  font-weight: 500;
-  letter-spacing: 0.3px;
-  text-align: left;
-  color: #2f2d2d;
-  position: relative;
-  bottom: 5px;
-}
 
 .description {
   font-family: IBM Plex Sans;
@@ -135,15 +110,7 @@ a {
   letter-spacing: 0.1px;
   text-align: left;
   color: #2f2d2d;
-  padding: 10px 0px 10px 10px;
-  border-top: 1px solid #4a4a4a;
-}
-
-.logo {
-  width: 115px;
-  height: 21.1px;
-  object-fit: contain;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
 }
 
 .container {
