--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,12 @@ body {
   margin: 0;
 }
 header, footer {
-  background-color: #ffafcc;
+  background-color: #2a9d8f;
   text-align: left;
 /*  min-width: 500px; */
 }
 header {
-  font-family: 'IBM Plex Sans', serif;
+  font-family: 'Commissioner', serif;
   color: #fff;
   min-height: 100vh;
   display: flex;
@@ -35,20 +35,20 @@ main {
   align-content: center;
 }
 h1 {
-  font-family: IBM Plex Serif;
-  font-size: calc(1em + 3vw);
+  font-family: Fraunces;
+  font-size: calc(1em + 3vw);Fraunces
   padding-bottom: .67em;
   border-bottom: 1px solid;
   line-height: 1.3;
 }
 
 h2 {
-  font-family: IBM Plex Serif;
+  font-family: Fraunces;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #ffafcc;
+  color: #2a9d8f;
   padding: 10px 0px 10px 10px;
 }
 
@@ -68,7 +68,7 @@ img {
 .bio {
   color: #ffffff;
   font-size: 24px;
-  font-family: 'IBM Plex Sans';
+  font-family: 'Commissioner';
 }
 .buttonBox {
   display: flex;
@@ -103,7 +103,7 @@ img {
 
 
 .description {
-  font-family: IBM Plex Sans;
+  font-family: Commissioner;
   font-size: 18px;
   font-weight: 300;
   line-height: 1.29;
@@ -120,7 +120,7 @@ img {
 
 footer div {
   height: 100%;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'Commissioner', sans-serif;
   font-size: 20px;
   display: flex;
   align-content: center;
